# reddwarf

./: AUDIT.md  Cargo.toml  DEVELOPMENT.md  PHASE4_SUMMARY.md  README.md
crates/reddwarf/: Cargo.toml
crates/reddwarf-apiserver/: Cargo.toml
crates/reddwarf-apiserver/src/: error.rs  event_bus.rs  lib.rs  response.rs  server.rs  state.rs  tls.rs  validation.rs  watch.rs
crates/reddwarf-apiserver/src/handlers/: common.rs  mod.rs  namespaces.rs  nodes.rs  pods.rs  services.rs
crates/reddwarf-core/: Cargo.toml
crates/reddwarf-core/src/: error.rs  events.rs  lib.rs  types.rs
crates/reddwarf-core/src/resources/: mod.rs  quantities.rs
crates/reddwarf-runtime/: Cargo.toml
crates/reddwarf-runtime/src/: api_client.rs  command.rs  controller.rs  error.rs  illumos.rs  lib.rs  mock.rs  node_agent.rs  node_health.rs  sysinfo.rs  traits.rs  types.rs
crates/reddwarf-runtime/src/brand/: custom.rs  lx.rs  mod.rs
crates/reddwarf-runtime/src/network/: ipam.rs  mod.rs  types.rs
crates/reddwarf-runtime/src/probes/: executor.rs  mod.rs  tracker.rs  types.rs
crates/reddwarf-runtime/src/storage/: mock.rs  mod.rs  zfs.rs
crates/reddwarf-runtime/src/zfs/: mod.rs
crates/reddwarf-runtime/src/zone/: config.rs  mod.rs  state.rs
crates/reddwarf-scheduler/: Cargo.toml
crates/reddwarf-scheduler/src/: error.rs  filter.rs  lib.rs  scheduler.rs  score.rs  types.rs
crates/reddwarf-storage/: Cargo.toml
crates/reddwarf-storage/src/: encoding.rs  error.rs  kv.rs  lib.rs  redb_backend.rs
crates/reddwarf-versioning/: Cargo.toml
crates/reddwarf-versioning/src/: commit.rs  conflict.rs  error.rs  lib.rs  store.rs
crates/reddwarf/src/: main.rs
docs/ai/research/: High-Performance Engineering of a Rust-Based, Single-Binary Kubernetes Control Plane_ An Architectural Framework for Distributed Resource Management.md  Rust Kubernetes Control Plane Research.md
smf/: manifest.xml  method.sh
