[package]
name = "reddwarf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
k8s-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
