[package]
name = "reddwarf-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
reddwarf-core = { workspace = true }
tokio = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
